# NA-templates

./: CMakeLists.txt  main.cpp
10-algos/: implementation.cpp
20-type-template/: implementation.h
30-traits/: implementation.h
40-algos-impl/: find_if.h  inner_product.h  vector_erase.h
50-sfinae/: implementation-void_t.h  implementation.h
fun1/: CMakeLists.txt  fun1.cpp
fun2/: CMakeLists.txt  fun2.cpp
